[package]
name = "acme-dns-client"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/tcurdt/acme-dns-client"
repository = "https://github.com/tcurdt/acme-dns-client"
description = "ACME client for just a simple DNS challenge"



[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
hickory-proto = "0.24"
ureq = { version = "2", features = ["json"] }
ring = "0.17"
rcgen = "0.13"
base64 = "0.22"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
